bases/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  annotations:
    mimikyu.reynn.net/resource-profiile: small
spec:
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: k3s.io/hostname
                    operator: In
                    values:
                      - mimikyu
      containers:
        - name: qbittorrent
          image: linuxserver/qbittorrent
          resources: {}
          ports:
            # The port for the IPFS web UI
            - containerPort: 80
              name: http-ui
              # HTTPS port for web UI
            - containerPort: 443
              name: https-ui
              # Peering port, this is the only port you should expose to the internet
            - containerPort: 4001
              name: tcp-peering
              # API port, the clientside webUI needs to be able to talk to this from whatever machine your web browser is on
            - containerPort: 5001
              name: tcp-api
              # Gateway Port, actually serves IPFS content
            - containerPort: 8080
              name: tcp-gateway
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /media/deadpool
              name: media
      volumes:
        - name: media
          hostPath:
            path: /media/deadpool/
            type: Directory
        - name: config
          hostPath:
            path: /media/deadpool/docker/media-server/qbittorrent
            type: Directory
