bases/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  selector:
    app: qbittorrent
  ports:
    - name: tcp-gateway
      port: 8080
    - name: tcp-peering
      port: 4001
